def mainClassName = "pro.gravit.launchermodules.sentryl.SentryModule"
def configClassName = "pro.gravit.launchermodules.sentryl.Config"

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
    implementation('io.sentry:sentry:6.18.1') {
        exclude group: 'org.slf4j'
    }
    implementation('io.sentry:sentry-log4j2:6.18.1') {
        exclude group: 'org.apache.logging.log4j'
    }
    compileOnly 'com.github.oshi:oshi-core:6.4.0'
}

jar {
    manifest.attributes("Module-Main-Class": mainClassName,
            "Module-Config-Class": configClassName,
            "Module-Config-Name": "Sentry")
}

